[package]
name = "nautirust"
version = "0.1.2"
edition = "2021"

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
clap = { version = "3.1.18", features = ["derive"] }
config = "0.13.1"
dialoguer = { version = "0.10.1", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
dirs = "4.0.0"
glob = "0.3.0"
jsonpath-rust = "0.1.5"
jsonschema = { version = "0.16.0", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["std", "serde_derive", "derive"] }
serde_json = "1.0.81"
tempdir = "0.3.7"
