[package]
name = "nautirust"
version = "0.1.2"
edition = "2021"

[lib]
name = "nautirust"

[dependencies]
async-recursion = { version = "1.0.0", optional = true }
async-std = { version = "1.11.0", features = ["attributes"], optional = true }
clap = { version = "3.1.18", features = ["derive"], optional = true }
config = { version = "0.13.1", optional = true }
dialoguer = { version = "0.10.1", features = [
  "completion",
  "fuzzy-matcher",
  "fuzzy-select",
  "history",
], optional = true }
dirs = { version = "4.0.0", optional = true }
glob = { version = "0.3.0", optional = true }
jsonpath-rust = { version = "0.1.5", optional = true }
jsonschema = { version = "0.16.0", default-features = false }

serde = { version = "1.0.137", features = ["std", "serde_derive", "derive"] }
serde_json = "1.0.81"

tempdir = { version = "0.3.7", optional = true }

[features]
default = ["io", "cli"]
io = ["async-std", "glob"]
cli = [
  "async-recursion",
  "clap",
  "config",
  "dialoguer",
  "dirs",
  "glob",
  "jsonpath-rust",
  "tempdir",
]
