[package]
name = "nautirust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nautirust = { path = "../", default-features = false }
yew = "0.19"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
weblog = "0.3.0"
yew-feather = "0.2.1"

